[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=2]
[ext_resource path="res://mods/stedee.BetterItemSelect/Scenes/amount_input.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/accid___.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.933333, 0.835294, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 28
outline_size = 2
outline_color = Color( 1, 0.933333, 0.835294, 1 )
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Blur" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="BG" type="Panel" parent="."]
anchor_left = 0.35
anchor_top = 0.35
anchor_right = 0.65
anchor_bottom = 0.65
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98

[node name="Label" type="Label" parent="BG/VBoxContainer"]
margin_right = 552.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "Amount:"

[node name="CenterContainer" type="CenterContainer" parent="BG/VBoxContainer"]
margin_top = 38.0
margin_right = 552.0
margin_bottom = 235.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="BG/VBoxContainer/CenterContainer"]
margin_left = 231.0
margin_top = 53.0
margin_right = 321.0
margin_bottom = 143.0
rect_min_size = Vector2( 90, 90 )
custom_styles/panel = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="BG/VBoxContainer/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
expand = true

[node name="stack_count" type="Label" parent="BG/VBoxContainer/CenterContainer/Panel"]
anchor_left = 0.0666667
anchor_top = 0.133333
anchor_right = 1.06667
anchor_bottom = 1.13333
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0.0627451, 0.109804, 0.192157, 1 )
custom_fonts/font = SubResource( 6 )
text = "x99"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="VBoxContainer" parent="BG/VBoxContainer"]
margin_top = 239.0
margin_right = 552.0
margin_bottom = 311.0

[node name="HBoxContainer" type="HBoxContainer" parent="BG/VBoxContainer/HBoxContainer"]
margin_right = 552.0
margin_bottom = 34.0
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 176.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 8
align = 1
placeholder_text = "10"

[node name="VSeparator3" type="VSeparator" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 184.0
margin_bottom = 34.0
custom_styles/separator = SubResource( 3 )

[node name="VSeparator" type="VSeparator" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 364.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 4 )

[node name="VSeparator4" type="VSeparator" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 368.0
margin_right = 372.0
margin_bottom = 34.0
custom_styles/separator = SubResource( 3 )

[node name="VSeparator2" type="VSeparator" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 376.0
margin_right = 552.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="BG/VBoxContainer/HBoxContainer"]
margin_top = 38.0
margin_right = 552.0
margin_bottom = 72.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 176.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 12
theme = ExtResource( 1 )
text = "Done"

[node name="VSeparator" type="VSeparator" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 180.0
margin_right = 184.0
margin_bottom = 34.0
custom_styles/separator = SubResource( 3 )

[node name="Button2" type="Button" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 188.0
margin_right = 364.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 12
theme = ExtResource( 1 )
text = "Half"

[node name="VSeparator2" type="VSeparator" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 368.0
margin_right = 372.0
margin_bottom = 34.0
custom_styles/separator = SubResource( 3 )

[node name="Button3" type="Button" parent="BG/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 376.0
margin_right = 552.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource( 1 )
text = "All"

[node name="Button" type="Button" parent="BG"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_top = -14.0
rect_min_size = Vector2( 32, 32 )
theme = ExtResource( 1 )
text = "X"

[connection signal="pressed" from="BG/VBoxContainer/HBoxContainer/HBoxContainer2/Button" to="." method="_on_done_Button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/HBoxContainer/HBoxContainer2/Button2" to="." method="_on_half_Button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/HBoxContainer/HBoxContainer2/Button3" to="." method="_on_all_Button_pressed"]
[connection signal="pressed" from="BG/Button" to="." method="_on_close_Button_pressed"]
